# 2026_WORLD_CUP_ML_PREDICTION

./: .gitignore  README.md  pyproject.toml
docs/results/: phase2-backtest.md  phase3-2026-prediction.md
docs/superpowers/plans/: 2026-06-13-wc2026-phase1-foundation.md  2026-06-13-wc2026-phase2ab-data-and-gbm.md  2026-06-13-wc2026-phase2cd-bayesian-and-meta.md  2026-06-13-wc2026-phase3-monte-carlo-sim.md
docs/superpowers/specs/: 2026-06-13-worldcup-2026-predictor-design.md
scripts/: baseline_report.py  export_web_data.py  full_backtest.py  phase1_smoke.py  predict_2026.py
src/wc2026/: tournaments.py
tests/: test_backtest.py  test_backtest_filter.py  test_compare.py  test_data_fetch.py  test_data_rankings.py  test_data_results.py  test_dixon_coles.py  test_elo_engine.py  test_eval_calibration.py  test_eval_scoring.py  test_features_build.py  test_features_enriched.py  test_features_leakage.py  test_full_backtest_smoke.py  test_m1_poisson.py  test_meta.py  test_models_baselines.py  test_models_gbm.py  test_odds.py  test_periods.py  test_phase1_smoke.py  test_predict_2026_smoke.py  test_report_includes_gbm.py  test_sim_bracket.py  test_sim_group_stage.py  test_sim_knockout.py  test_sim_match.py  test_sim_tournament.py  test_tournaments.py
tests/fixtures/: mini_rankings.csv  mini_results.csv
web/: DESIGN_BRIEF.md  MATH_BRIEF.md  MATH_REDESIGN_BRIEF.md  REDESIGN_BRIEF.md  index.html  math.html
web/css/: math.css  styles.css
web/data/: predictions.json
web/js/: album.js  ball.js  confetti.js  detail.js  main.js  math.js  util.js
web/tests/: util.test.html
(+23 files in other folders)
