[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "wc2026"
version = "0.1.0"
description = "FIFA World Cup 2026 winner predictor — foundation layer"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "scikit-learn>=1.3",
  "scipy>=1.10",
  "pymc>=6.0",
  "arviz>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
markers = ["slow: long-running (variational/MCMC) tests"]
